--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,8 @@
 % Don't introduce table of contents in the HTML mode, as it introduces another page
 \ifdefined\HCode\else\tableofcontents\fi
 
+Before a section
+
 \section{Intro}
 \subsection{HELLO}
 world!
